--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -86,9 +86,9 @@ Global.asax:
 * ASP.NET Webform
 ** aspx 文件
 
-一个 aspx 主要包含如下内容。
+首先，可以将 aspx 文件看做一个加强版的 html 文件，所以，它完全接受 html 语法。
 
-首先，可以将 aspx 文件看做一个加强版的 html 文件，所以，它完全接受 html 语法:
+因此创建一个 Hello.aspx 文件，内容如下:
 #+begin_src html
   <html>
     <h1>我是 Hello.aspx 文件，所有的 html 代码在这里都会被原样返回给浏览器</h1>
@@ -96,7 +96,7 @@ Global.asax:
   </html>
 #+end_src
 
-这时候，运行后，可以通过 ~/localhost:port/Hello.aspx~ 访问这个页面。浏览器中查看源代码可以看到内容跟上述一致。
+运行项目，可以通过 ~/localhost:port/Hello.aspx~ 访问这个页面。浏览器中查看源代码可以看到内容跟上述一致。
 
 接下来，aspx 文件中，可以接受行内表达式语法。这种语法来源于之前的 asp 时代，是在 html 内嵌 C#/VB 代码的一种方式 ([[https://learn.microsoft.com/en-us/troubleshoot/developer/webapps/aspnet/development/inline-expressions][官方链接]])。
 #+begin_src html
