best_try_and_best_chance

--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -189,7 +189,7 @@ Global.asax:
 为了简化在 aspx 中构建页面，可以通过母版的方式，将整体的页面布局代码分离到外面 (挖坑-填坑)，
 达到共用布局的目的。
 
-方法很简单，首先，要创建一个模板文件。它跟 aspx 很像，只是文件的后缀和页面指令不同。比如，创建一个 yyy.Master 母版:
+方法很简单，首先，要创建一个母版文件。它跟 aspx 很像，只是文件的后缀和页面指令不同。比如，创建一个 yyy.Master 母版:
 #+begin_src html
   <%@ Master Language="C#" %>
 
