--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -245,6 +245,10 @@ Global.asax:
 - 在父类 Page 中，初始化了很多属性和方法，可以直接使用
 - 因此，掌握 Page 类的​*生命周期*和 Page 的基本方法属性非常重要
 
+Page 类事件：
+[[file:img/oimg_20220928_005325.png]]
+
+
 * ASP.NET MVC
 
 MVC:
