best_try_and_best_chance

--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -354,7 +354,7 @@ Unload:
   {
       // 1. 这个方法用来进行清理工作
       // 2. 在这个阶段，所有工作都已经完成，可以放心释放任何资源，包括 Page 对象
-      // 3. 在这里，不能使用 ~Response.Write~ 进行输出，否则会报错
+      // 3. 在这里，不能使用 Response.Write 输出内容，否则会报错
   }
 #+end_src
 
