--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -8,7 +8,7 @@
 :END:
 
 1. 使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来
-2. 将官网的 WingtipToys 项目认真按步骤敲一遍，做到理解+掌握
+2. 将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握
 
 * [2022-09-21 Wed]
 
