--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -405,6 +405,10 @@ Code Action Task:
 #+end_example
 
 #+HTML: <details><summary>答案</summary>
+
+标注着 runat=server 的控件上的状态，
+在每次请求的时候，都会被通过 _ViewState 的方式自动传递着。
+
 #+begin_src html
   <p>
       <asp:TextBox ID="tb1" runat="server" />
