--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -438,7 +438,7 @@ Code Action Task:
       }
   }
 #+end_src
-#+HTML: </details><br/><br/>
+#+HTML: </details><br/>
 
 Code Action Task:
 #+begin_example
