--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -491,7 +491,7 @@ Code Action Task:
 
 #+HTML: </details>
 
-** 数据控件
+** 常用控件
 *** GridView
 
 https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.gridview?view=netframework-4.8
@@ -569,6 +569,43 @@ https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.repeater?
           </ul>
       </FooterTemplate>
   </asp:Repeater>
+#+end_src
+
+** 用户自定义控件
+
+控件的主要目的，是复用。使用控件跟调用方法很类似，只不过方法的核心是逻辑，控件的核心是视图。
+
+自定义控件的后缀名为 ascx，以 <%@ Control> 作为标记。以 MyLogin.ascx 为例:
+#+begin_src html
+  <%@ Control Language="C#" AutoEventWireup="true" CodeBehind="MyLogin.ascx.cs" Inherits="StudentManageSystem_WF.MyLogin" %>
+
+  <div>
+      <asp:TextBox ID="username" runat="server" />
+      <asp:TextBox ID="TextBox1" runat="server" />
+      <asp:Button ID="skdfjskdjf" runat="server" Text="denglu" />
+  </div>
+#+end_src
+#+begin_src csharp
+  public partial class MyLogin : System.Web.UI.UserControl
+  {
+      public string DefaultUsername { get; set; }
+
+      protected void Page_Load(object sender, EventArgs e)
+      {
+          if (!IsPostBack)
+          {
+              username.Text = DefaultUsername;
+          }
+      }
+  }
+#+end_src
+
+要使用控件，需要通过 <%@ Register > 对控件进行注册:
+#+begin_src html
+  <%@ Register Src="~/MyLogin.ascx" TagName="MyLogin" TagPrefix="fl" %>
+  <p>
+    <fl:MyLogin runat="server" DefaultUsername="xxx" />
+  </p>
 #+end_src
 
 * ASP.NET MVC
