--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -10,6 +10,12 @@
 1. 使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来
 2. 将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握
 
+国庆节后检查:
+- 第一题，15个人完成
+- 第二题，1个人完成
+
+后续又花费两天一起完成第一题。第二题，弃。
+
 * [2022-09-21 Wed]
 
 关于 HTTP 的无状态性:
