--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,11 +1,17 @@
 #+TITLE: 任务和作业
 
 
-
-* [2022-09-29 Thu]
+* [2022-10-10 Mon]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+实现博客项目中[文章管理]相关的功能:
+- 包括文章的添加、查看、编辑、删除
+- 样式以及流程可以参考[[https://blog.csdn.net/qq_36130719?type=blog][一些博客网站]]
+- 项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)
+
+* [2022-09-29 Thu]
 
 1. 使用 Webform 方式，将学生管理系统 (CRUD) 完整复刻出来
 2. 将官网的 WingtipToys 项目认真按步骤敲一遍 (或多遍)，做到理解+掌握
