best_try_and_best_chance

--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -6,7 +6,7 @@
 :CUSTOM_ID: active
 :END:
 
-实现博客项目中[文章管理]相关的功能:
+实现博客项目中 “文章管理” 相关的功能:
 - 包括文章的添加、查看、编辑、删除
 - 样式以及流程可以参考[[https://blog.csdn.net/qq_36130719?type=blog][一些博客网站]]
 - 项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)
