best_try_and_best_chance

--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -10,6 +10,7 @@
 - 包括文章的添加、查看、编辑、删除
 - 样式以及流程可以参考[[https://blog.csdn.net/qq_36130719?type=blog][一些博客网站]]
 - 项目名字命名格式: 姓名拼音.MyBlog (切!切!切!拼音要大写字母开始)
+- 动手写代码之前，建议做好原型设计以及数据库设计
 
 * [2022-09-29 Thu]
 
