best_try_and_best_chance

--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,10 +1,17 @@
 #+TITLE: 任务和作业
 
 
-* [2022-10-10 Mon]
+* [2022-10-11 Tue]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+- 概念总结: MVC vs 三层架构
+- 了解什么是 CSRF 攻击
+- 熟悉 MVC 中 CRUD 的基本流程
+- 预习: MVC 的生命周期
+
+* [2022-10-10 Mon]
 
 实现博客项目中 “文章管理” 相关的功能:
 - 包括文章的添加、查看、编辑、删除
