--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -654,7 +654,9 @@ https://learn.microsoft.com/zh-cn/dotnet/api/system.web.ui.webcontrols.repeater?
 
 * ASP.NET MVC
 
-MVC:
-- Model (模型)
-- View  (视图)
-- Controller (控制器)
+- 基于 MVC 概念:
+  + Model (模型)
+  + View  (视图)
+  + Controller (控制器)
+- 使用 Razor 作为页面的模板引擎
+- 约定大于配置 (CoC) 的理念
