--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -20,8 +20,12 @@
 - 动手写代码之前，建议做好原型设计以及数据库设计
 - 要求完成时间: 10月10日，第一节、第二节、第三节
 
-小结:
-- 10.10 下午第一节，仅有两组上交
+10.10 下午第一节:
+- 仅有两组上交
+
+10.11 下午第一节:
+- 未交: 郭松鹏、黎绍伟、郑钧洹、唐迪、刘少钦、卢传君、周晓乐、李晓辉、钟宇杨、梁恩宁、吴标 (请假) 共 11 人
+- 很多人，项目命名不规范.....执行力严重不足
 
 * [2022-09-29 Thu]
 
