--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -23,7 +23,7 @@
 10.10 下午第一节:
 - 仅有两组上交
 
-10.11 下午第一节:
+10.11 下午最后一节:
 - 未交: 郭松鹏、黎绍伟、郑钧洹、唐迪、刘少钦、卢传君、周晓乐、李晓辉、钟宇杨、梁恩宁、吴标 (请假) 共 11 人
 - 很多人，项目命名不规范.....执行力严重不足
 
