best_try_and_best_chance

--- a/.src/database/1-sqlserver.org
+++ b/.src/database/1-sqlserver.org
@@ -6,7 +6,7 @@
 版本:
 - SQLServer
 - SQLServer Express (免费版本，对资源使用有很多限制)
-- SQLServer LocalDB (本地数据库，没有多用户和网络连接功能)
+- SQLServer Express LocalDB (本地数据库，没有多用户和网络连接功能)
 
 可以使用 ~sqllocaldb~ 命令对 LocalDB 进行管理:
 #+begin_src shell
