--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,10 +1,16 @@
 #+TITLE: 任务和作业
 
 
-* [2022-10-11 Tue]
+* [2022-10-12 Wed]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+- 先模仿后超越: [[https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started][ASP.NET 入门项目]]，认真敲认真练
+- 了解什么是 XSS 攻击，如何防范
+- 预习: MVC 的生命周期
+
+* [2022-10-11 Tue]
 
 - 概念总结: MVC vs 三层架构
 - 了解什么是 CSRF 攻击
