--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -6,6 +6,14 @@
 :CUSTOM_ID: active
 :END:
 
+- *将 [[https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started][ASP.NET 入门项目]] 吃透、敲熟*
+- 学会使用 SqlServer Express LocalDB 进行开发
+- 掌握 EF 中模型与数据库之间的 Migration 命令
+- 了解 Model 验证的基本流程，掌握常用的内置 ValidationAttribue，会自定义 ValidationAttribute
+- 总结 MVC 中进行表单验证的其他方法
+
+* [2022-10-12 Wed]
+
 - 先模仿后超越:  [[https://learn.microsoft.com/zh-cn/aspnet/mvc/overview/getting-started/introduction/getting-started][ASP.NET 入门项目]], *认真敲认真练*, 记得要整理笔记!
 - 了解什么是 XSS 攻击，如何防范
 - 预习: MVC 的生命周期
