best_try_and_best_chance

--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -1,16 +1,24 @@
 #+TITLE: 任务和作业
 
 
-* [2022-10-14 Fri]
+* [2022-10-17 Mon]
 :PROPERTIES:
 :CUSTOM_ID: active
 :END:
+
+- IEnumerable/foreach 可迭代对象
+- 请告诉我这两个概念的区别: override/overload, 重写 vs 重载
+- 泛型
+
+* [2022-10-14 Fri]
 
 将【学生管理】的增删改查 (CRUD) 使用 MVC 进行实现并完善:
 - 完成基本功能，优化页面显示
 - 在首页增加按名字/城市 *过滤* 的功能
 - 增加适当的输入验证
 - 增加登录功能，并为相关添加、修改、删除业务增加认证限制，即必须登录之后才能进行
+
+检查: 7 人完成。
 
 * [2022-10-13 Thu]
 
