--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -43,6 +43,24 @@
   return ret;
 #+end_src
 
+#+begin_src csharp
+  // 1
+  string html = "<p>";
+  html += "hello";
+  html += ",";
+  html += "world";
+  html += "</p>"
+  Console.WriteLine(html);
+
+  // 2
+  string s = "";
+  for (int i = 0; i < 100; i++)
+  {
+      s += i;
+  }
+  Console.WriteLine(s);
+#+end_src
+
 * [2022-10-17 Mon]
 
 - IEnumerable/foreach 可迭代对象
