--- a/.src/111/tasks.org
+++ b/.src/111/tasks.org
@@ -56,11 +56,19 @@
 
   // 2
   string s = "";
-  for (int i = 0; i < 100; i++)
+  for (int i = 0; i < 10; i++)
   {
       s += i;
   }
   Console.WriteLine(s);
+
+  // 2
+  StringBuilder sb = new StringBuilder();
+  for (int i = 0; i < 10; i++)
+  {
+      sb.Append(i);
+  }
+  Console.WriteLine(sb.ToString());
 #+end_src
 
 * [2022-10-17 Mon]
