--- a/.src/dotnet/5-aspnet.org
+++ b/.src/dotnet/5-aspnet.org
@@ -794,3 +794,129 @@ ActionResult:
 - IActionFilter (ActionFilterAttribute)
 - IResultFilter (ActionFilterAttribute)
 - IExceptionFilter (HandleErrorAttribute)
+
+* ASP.NET WebAPI
+** JSON
+
+JavaScript Object Notation.
+
+来源于 Javascript 的对象语法:
+#+begin_src javascript
+  var i = 1;
+  var j = "hello";
+  var arr = [2, 3, 4];
+  var obj = {
+      "a": 1,
+      "b": 2,
+      "c": 3
+  };
+  var students = [
+      {
+          id: 1,
+          name: 222,
+          age: 333
+      },
+      {
+          id: 2,
+          name: 222,
+          age: 333
+      },
+      {
+          id: 3,
+          name: 222,
+          age: 333
+      }
+  ];
+#+end_src
+
+使用 JS 在 Json 字符串和对象之间进行转换:
+#+begin_src javascript
+  var s1 = [{id: 1, name: 'zs'}, {id:2, name:'ls'}];
+  var stringS1 = JSON.stringify(s1);
+
+  var s2 = '[{"id": 3333, "name": "lisi"},{"id": 444, "name": "wangwu"}]';
+  var jsonS2 = JSON.parse(s2);
+#+end_src
+
+使用 CSharp 在 Json 字符串和 C# 对象之间进行转换:
+#+begin_src csharp
+  var students = new List<Student>
+  {
+      new Student { Id = "1", Name = "zhangsan" },
+      new Student { Id = "2", Name = "lisi" }
+  };
+  string s1 = JsonConvert.SerializeObject(students);
+  List<Student> s2 = JsonConvert.DeserializeObject<List<Student>>(s1);
+  s2.Add(new Student { Id = "3", Name = "ww" });
+  return JsonConvert.SerializeObject(s2);
+#+end_src
+
+** WebApiConfig.cs
+
+可以在这里配置 WebAPI 相关的选项。
+
+比如，设置返回数据格式:
+#+begin_src csharp
+  // 让默认情况下不返回 xml 结果的数据，而是 JSON 的
+  config.Formatters.XmlFormatter.SupportedMediaTypes.Clear();
+  // 对 JSON 数据使用混合大小写
+  config.Formatters.JsonFormatter.SerializerSettings.ContractResolver = new CamelCasePropertyNamesContractResolver();
+  // 添加自定义的 Formatter
+  config.Formatters.Add(new YourFormatter());
+#+end_src
+
+比如，设置路由格式:
+#+begin_src csharp
+  config.Routes.MapHttpRoute(
+      name: "DefaultApi",
+      routeTemplate: "api/{controller}/{id}",
+      defaults: new { id = RouteParameter.Optional }
+  );
+#+end_src
+
+** Router
+
+默认的路由规则是在 WebApiConfig.cs 中定义的:
+: api/{controller}/{id}
+
+因此:
+- 请求 =GET /abc= 对应 AbcController 的 =GetXxx= 方法
+- 请求 =PUT /abc/3= 对应 AbcController 的 =PutXxx(id)= 方法
+- 默认情况是通过方法名的前缀判断 HTTP METHOD 的。可以通过在 Action 上添加 =[HttpGet]= 等特性显式指定
+- 可以将 =[Route("xxx")]= 添加到 Controller 或 Action 上，单独设置独立的路由
+
+** Action
+
+方法名字 vs 请求方法:
+- 按照 CoC 的设计思想，GetBook 默认将处理 GET 请求，DeleteBook 默认将处理 Delete 请求，如此类推
+- 可以通过在 Action 上添加 [HttpXxx] 特性，显式指定请求方法
+
+返回类型:
+| 返回类型            | Web API 如何创建响应                                                     |
+|---------------------+--------------------------------------------------------------------------|
+| void                | 返回空 204 (无内容)                                                      |
+| HttpResponseMessage | 直接转换为 HTTP 响应消息。                                               |
+| IHttpActionResult   | 调用 ExecuteAsync 以创建 HttpResponseMessage，然后转换为 HTTP 响应消息。 |
+| 其他类型的          | 将序列化的返回值写入响应正文;返回 200 (OK) 。                            |
+
+示例:
+#+begin_src csharp
+  // 将会自动序列化为 JSON 返回
+  public Book GetBook(int id)
+  {
+      return db.Books.Find(id);
+  }
+
+  // 灵活进行不同的响应
+  public IHttpActionResult GetBook(int id)
+  {
+      Book book = db.Books.Find(id);
+      return book == null ? NotFound() : Ok(book);
+  }
+#+end_src
+
+** Help
+
+在 Areas 下面存在一个 HelpPage 的域，里面实现了展示当前所有 API 文档的功能。
+
+可以通过 =https://localhost:23232/Help= 的方式进行访问。
